Dreamview:Add fuel client panel

--- a/modules/dreamview/frontend/src/store/config/parameters.yml
+++ b/modules/dreamview/frontend/src/store/config/parameters.yml
@@ -253,6 +253,8 @@ options:
     default: false
   showCycleNumberInput:
     default: false
+  showFuelClient:
+    default: false
   
 
 routingEditor:
